Refactor code structure and enhance readability in multiple modules

--- a/src/assets/scss/abstract/_variables.scss
+++ b/src/assets/scss/abstract/_variables.scss
@@ -1,9 +1,12 @@
-$white:#ffffff;
-$black:#000000;
-$black-100:#172B4D;
-$primary:linear-gradient(100.19deg, #5556A5 0%, #3B3C97 84.47%);
-$primary-14:#091E4224;
-$primary-100:linear-gradient(100.19deg, #48498C 0%, #2D2E73 84.47%);
+$white: #ffffff;
+$black: #000000;
+$black-100: #172B4D;
+$black-200: #E0E0E0;
+$black-500: #252525;
+$primary: linear-gradient(100.19deg, #5556A5 0%, #3B3C97 84.47%);
+$secondary: #00000000;
+$primary-14: #091E4224;
+$primary-100: linear-gradient(100.19deg, #48498C 0%, #2D2E73 84.47%);
 
 
 
